updated for deploy

--- a/static/index.html
+++ b/static/index.html
@@ -625,7 +625,7 @@
     synth.onvoiceschanged = () => {
       const voice = getPreferredVoice();
       console.log('Selected voice on voiceschanged:', voice?.name || 'None');
-    };
+    }; //just to update deploy
   </script>
 </body>
 </html>
