--- a/static/quiz.html
+++ b/static/quiz.html
@@ -275,7 +275,7 @@
         animations.Idle.play();
         console.log("Ensuring animation is playing");
       } else {
-        console.log("No animation to play");
+        console.log("No animation to play"); //just to deply
       }
     }
 
@@ -655,5 +655,5 @@
       console.log('Voices loaded:', voices.map(v => ({ name: v.name, lang: v.lang })));
     };
   </script>
-</body>
+</body> 
 </html>
