--- a/static/index.html
+++ b/static/index.html
@@ -500,29 +500,102 @@
       console.log('Selected female voice:', femaleVoice.name);
       return femaleVoice;
     }
+async function speakWithElevenLabs(text) {
+  const voiceId = '21m00Tcm4TlvDq8ikWAM'; // Change to your desired ElevenLabs Voice ID
+  const apiKey = 'YOUR_API_KEY_HERE'; // Never expose this in client-side code in production
 
-    function speakText(text) {
-      const noEmojiText = text.replace(/[\p{Emoji_Presentation}\p{Extended_Pictographic}]/gu, '');
-      const utter = new SpeechSynthesisUtterance(noEmojiText);
-      const selectedVoice = getPreferredVoice();
-      if (!selectedVoice) {
-        console.warn('No voice available for TTS');
-        return;
-      }
-      utter.voice = selectedVoice;
-      utter.rate = 0.9;
-      utter.pitch = 1.0;
-      utter.onstart = () => {
-        isSpeaking = true;
-        startMouthAnimation();
-      };
-      utter.onend = () => {
-        isSpeaking = false;
-        if (!isListening) playIdleAnimation();
-        stopMouthAnimation();
-      };
-      synth.speak(utter);
+  try {
+    const response = await fetch(`https://api.elevenlabs.io/v1/text-to-speech/${voiceId}`, {
+      method: 'POST',
+      headers: {
+        'Content-Type': 'application/json',
+        'xi-api-key': apiKey,
+      },
+      body: JSON.stringify({
+        text: text,
+        model_id: 'eleven_monolingual_v1',
+        voice_settings: {
+          stability: 0.5,
+          similarity_boost: 0.75
+        }
+      })
+    });
+
+    const audioBlob = await response.blob();
+    const audioUrl = URL.createObjectURL(audioBlob);
+    const audio = new Audio(audioUrl);
+    audio.play();
+
+    audio.onplay = () => {
+      isSpeaking = true;
+      startMouthAnimation();
+    };
+    audio.onended = () => {
+      isSpeaking = false;
+      stopMouthAnimation();
+    };
+
+  } catch (error) {
+    console.error('ElevenLabs TTS error:', error);
+    appendMessage("Voice service failed.", 'bot');
+  }
+}
+async function speakWithElevenLabs(text) {
+  const voiceId = '21m00Tcm4TlvDq8ikWAM'; // A known working voice
+  const apiKey = 'sk_80c9bf4ae60510e0b31b9a649043e6d7ea42ad02ec76c159'; // Never expose this in frontend for production
+
+  try {
+    const response = await fetch(`https://api.elevenlabs.io/v1/text-to-speech/${voiceId}`, {
+      method: 'POST',
+      headers: {
+        'Content-Type': 'application/json',
+        'xi-api-key': apiKey,
+      },
+      body: JSON.stringify({
+        text: text,
+        model_id: 'eleven_multilingual_v2', // ✅ Use this for broader compatibility
+        voice_settings: {
+          stability: 0.5,
+          similarity_boost: 0.75
+        }
+      })
+    });
+
+    if (!response.ok) {
+      const errorText = await response.text();
+      throw new Error(`❌ ElevenLabs API Error: ${response.status}\n${errorText}`);
     }
+
+    const audioBlob = await response.blob();
+    const audioUrl = URL.createObjectURL(audioBlob);
+    const audio = new Audio(audioUrl);
+    audio.play();
+
+    audio.onplay = () => {
+      isSpeaking = true;
+      startMouthAnimation();
+    };
+    audio.onended = () => {
+      isSpeaking = false;
+      stopMouthAnimation();
+    };
+
+  } catch (error) {
+    console.error('❌ ElevenLabs fetch error:', error);
+    appendMessage("Voice service failed.", 'bot');
+  }
+}
+
+  function speakText(text) {
+  if (!text || typeof text !== "string") return;
+
+  // Remove emojis for clean TTS
+  const noEmojiText = text.replace(/[\p{Emoji_Presentation}\p{Extended_Pictographic}]/gu, '');
+
+  // Always use ElevenLabs
+  speakWithElevenLabs(noEmojiText);
+}
+
 
     function appendMessage(text, sender) {
       const msg = document.createElement('div');
@@ -537,21 +610,21 @@
     }
 
     async function sendMessage() {
-      const input = document.getElementById('userInput');
-      const text = input.value.trim();
-      if (!text) return;
+    const input = document.getElementById('userInput');
+    const text = input.value.trim();
+    if (!text) return;
 
-      console.log('User input:', text);
-      appendMessage(text, 'user');
-      input.value = '...';
+    console.log('User input:', text);
+    appendMessage(text, 'user');
+    input.value = '...';
 
-      try {
+    try {
         const res = await fetch('/api/chat', {
-          method: 'POST',
-          headers: {
-            'Content-Type': 'application/json'
-          },
-          body: JSON.stringify({ message: text })
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify({ message: text })
         });
 
         const data = await res.json();
@@ -559,13 +632,12 @@
         const reply = data.reply || "Sorry, something went wrong.";
         appendMessage(reply, 'bot');
         input.value = '';
-      } catch (err) {
+    } catch (err) {
         console.error('Chat API error:', err);
         appendMessage("Sorry, something went wrong.", 'bot');
         input.value = '';
-      }
     }
-
+}
     const inputField = document.getElementById('userInput');
     inputField.addEventListener('keydown', function (event) {
       if (event.key === 'Enter') {
